--- a/app/src/main/res/layout/activity_queue.xml
+++ b/app/src/main/res/layout/activity_queue.xml
@@ -46,6 +46,7 @@
                 android:layout_height="wrap_content"
                 android:orientation="vertical">
                 <TextView
+                    android:id="@+id/test111"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_gravity="center"
